Fixed link import and content spacing

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,3 +5,7 @@
 
 @use './components/NavHeader/nav-header';
 
+.cds--content {
+    margin-top: 3rem;
+    margin-left: 3rem;
+  }
